Probando Otra forma de Datables

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,10 @@
    <link rel="stylesheet" href="{{url_for('static', filename='plugins/fontawesome-free/css/all.min.css')}}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{{url_for('static', filename='dist/css/adminlte.min.css')}}">
+  <!-- datatables -->
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/datablesNuevo/DataTables/css/dataTables.bootstrap5.min.css'')}}">
   
-  <link href="
-  https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -870,6 +871,10 @@
 <script src="{{url_for('static', filename='dist/js/adminlte.min.js')}}"></script>
 <!-- Custom scripts for all pages-->
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<script src="{{ url_for('static', filename='plugins/datatableNuevo/DataTables/js/jquery.dataTables.min.js') }}"></script>
+
+    <script src="{{ url_for('static', filename='plugins/datatableNuevo/DataTables/js/dataTables.bootstrap5.min.js') }}"></script>
 
 <script src="
 https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js"></script>
