--- a/templates/vistas_ciudades/index-ciudades.html
+++ b/templates/vistas_ciudades/index-ciudades.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
+
 {% block mi_css %}
-
 {% endblock %}
-
 
 {% block contenido_principal %}
 
@@ -38,7 +37,7 @@
  
         </div>
         <div class="card-body">
-          <table class="table">
+          <table class="table" id="tbl">
               <thead>
                 <tr>
                   <th scope="col">#</th>
@@ -112,8 +111,9 @@
 {% endblock %}
 
 {% block mi_javascript %}
-
-
+<script>
+  $('#tbl').DataTable();
+</script>
 
 
 {% endblock %}
