corregido errores del select

--- a/templates/vistas_personas/index-persona.html
+++ b/templates/vistas_personas/index-persona.html
@@ -53,6 +53,22 @@
     <!-- /.card-body -->
   </div>
   <!-- /.card -->
+  <div class="card shadow mb-4 col-12">
+    <div class="card-body">
+        <table class="table table-hover" id="tbl">
+            <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Nombres</th>
+                  <th scope="col">Apellidos</th>
+                  <th scope="col">CI</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+        </table>
+    </div>
+</div>
 
 </section>
 
