Cambio en menu y tabla ciudad

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition sidebar-mini sidebar-collapse" >
 <!-- Site wrapper -->
 <div class="wrapper">
   <!-- Navbar -->
