--- a/templates/vistas_ciudades/index-ciudades.html
+++ b/templates/vistas_ciudades/index-ciudades.html
@@ -24,6 +24,8 @@
   <section class="content">
 
     <!-- Default box -->
+<div class="row">
+  <div class="col-sm-6">
     <div class="card">
       <div class="card-header">
         <h3 class="card-title">Refencial Cuiudad</h3>
@@ -32,40 +34,39 @@
         <!--<a href="{{ url_for('agregar_ciudad') }}" class="btn btn-primary">Agregar ciudad</a>-->       
       </div>
       {% if ciudades|length > 0 %}
-      <div class="card">
-        <div class="card-header">
- 
-        </div>
-        <div class="card-body">
-          <table class="table" id="tbl">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Descripcion</th>
-                  <th scope="col">Acciones</th>
-                </tr>
-              </thead>
-              <tbody>
-                  {% for ciudad in ciudades %}
+          <div class="card-body">
+            <table class="table" id="tbl">
+                <thead>
                   <tr>
-                    <th scope="row">{{ ciudad['id'] }}</th>
-                    <td>{{ ciudad['descripcion']}}</td>
-                    <td>
-                      <a href="{{ url_for('editar_ciudad', id=ciudad['id']) }}" class="btn btn-primary">Editar</a>
-                      <a href="{{ url_for('delete_ciudad', id=ciudad['id']) }}" class="btn btn-warning">Eliminar</a>
-                    </td>
+                    <th scope="col">#</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">Acciones</th>
                   </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-            </div>
-          </div>
+                </thead>
+                <tbody>
+                    {% for ciudad in ciudades %}
+                    <tr>
+                      <th scope="row">{{ ciudad['id'] }}</th>
+                      <td>{{ ciudad['descripcion']}}</td>
+                      <td>
+                        <a href="{{ url_for('editar_ciudad', id=ciudad['id']) }}" class="btn btn-primary">Editar</a>
+                        <a href="{{ url_for('delete_ciudad', id=ciudad['id']) }}" class="btn btn-warning">Eliminar</a>
+                      </td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+        </div>
+      </div>
       {% else %}
             <div class="alert alert-info" role="alert">
               No hay elementos para mostrar
             </div>
-      {% endif %}       
+      {% endif %} 
     </div>
+  </div>      
+</div>
     <!-- /.card -->
 
   </section>
